# eai-flow-main

./: .env.docker  .env.example  .gitignore  .mcp.json  .role-create-dialog.txt  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  _write_report.py  body.txt  commit_msg.txt  config.example.yaml  create_nginx_wrapper.py  extensions_config.example.json  extensions_config.json  headers.txt  manage.sh  pr_body.txt  snapshot-after-select.txt  snapshot-ai-menu.txt  snapshot-ai-result.txt  test_4002.py  test_dotenv.py  test_dotenv2.py  test_gateway.py  test_import.py  test_openapi.py  test_openapi2.py  开发日志.md  手动差分技术方案.md
.github/: pull_request_template.md
.wolf/: ai-chat-response2.network-response  ai-chat-response3.network-response  ai-dialog-snapshot.txt  ai-result-snapshot.txt  ai-result2.txt  anatomy.md  buglog.json  cerebrum.md  cron-state.json  diff-response.network-response  identity.md  memory.md  snap2.txt  snapshot-collab.txt  snapshot-docmgr.txt  snapshot.txt  token-ledger.json  workflow_detail_tests.py  workflow_page_tests.py
backend/: CLAUDE.md  Dockerfile  Makefile  README.md  debug.py  launch_gateway.py  (+13 more)
business/common/python/: pyproject.toml
business/common/python/eai_common/: __init__.py  api_client.py  auth.py  config.py  database.py  exceptions.py  pagination.py
business/procurement-service/backend/: Dockerfile  pyproject.toml  requirements.txt
business/procurement-service/backend/app/: __init__.py  app.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
business/procurement-service/backend/app/routers/: bidders.py  bids.py  complaints.py  contracts.py  dashboard.py  evaluations.py  experts.py  plans.py  projects.py  venue_spaces.py  winning_bids.py  witness_records.py
business/project-service/backend/: .env.example  Dockerfile  pyproject.toml
business/project-service/backend/app/: __init__.py  app.py  auth.py  config.py  database.py  models.py  schemas.py
business/project-service/backend/app/routers/: __init__.py  dashboard.py  documents.py  milestones.py  projects.py  resources.py  risks.py  tasks.py
(+1082 files in other folders)
